# gitbox

./: .gitignore  Cargo.toml  README.md  build-release.sh  gitbox.code-workspace
.github/workflows/: release.yml
src/: config.rs  github.rs  main.rs  repo.rs  sync.rs
