[package]
name = "gitbox"
version = "0.5.1"
edition = "2021"
description = "Sync files across computers with git and GitHub"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
git2 = "0.18"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.143"

# Features for static linking
[features]
vendored-openssl = ["git2/vendored-openssl"]
